Centers mobile nav and fixes z-index section titles

--- a/app/styles/components/containers.scss
+++ b/app/styles/components/containers.scss
@@ -7,7 +7,7 @@
   position: relative;
   text-align: center;
   width: 90%;
-  z-index: 1000;
+  z-index: 200;
 
   @include breakpoint($small-breakpoint) {
     width: 95%;
